# alipay-platform-classifier

./: .gitignore  README.md  RUNBOOK.md  pyproject.toml  requirements.txt  run_tests.py
docs/: 合并推理_ML.NET方案.md  真值锚点采集方案.md  防伪能力汇报.md
gold/: gold_seed.example.json
scripts/: annotate_results.py  bootstrap_labels.py  build_splits.py  completeness_report.py  cross_signal_audit.py  diagnose_incomplete.py  drift_monitor.py  header_sheet.py  hygiene_report.py  inspect_samples.py  make_contact_sheet.py  make_delivery.py  measure_check_alignment.py  merge_device_labels.py  onnx_mlnet_check.py  photo_scan.py  preflight.py  profile_pipeline.py  recipient_composition_report.py  recipient_subtype_report.py  redteam_resolution_attack.py  redteam_resolution_prod.py  redteam_statusbar_composite.py  redteam_statusbar_composite_prod.py  review_sheet.py  train_strip_classifier.py
src/alipay_platform/: __init__.py  bootstrap.py  cache_regions.py  fusion.py  grouping.py  hashing.py  labeling.py  metadata_seed.py  photo_detector.py  platform_labels.py  regions.py  strip_features.py
tests/: test_bootstrap.py  test_cache_regions.py  test_fusion.py  test_grouping.py  test_hashing.py  test_labeling.py  test_metadata_seed.py  test_photo_detector.py  test_platform_labels.py  test_regions.py  test_strip_features.py
training/: README.md  classify_batch.py  consistency_check.py  dataset.py  device_classifier.py  export.py  infer_cpu.py  infer_gpu.py  model.py  prepare_dataset.py  preprocess.py  requirements-train.txt  self_train.py  train.py
